# toolshop-api-quality-suite

./: 00-LEIA-PRIMEIRO.txt  README.md  RESUMO-DO-PROJETO.txt  pyproject.toml
docs/: escopo-da-api.md  estrategia-de-testes.md  guia-de-revisao.md  guia-de-revisao.txt
evidence/: README.md
evidence/2026-04-14-rodada-smoke-api/: README.md  pytest-negative.txt  pytest-negative.xml  pytest-smoke.txt  pytest-smoke.xml
execution-reports/: 2026-04-14-rodada-smoke-api-01.md  2026-04-14-rodada-smoke-api-01.txt
tests/: conftest.py  test_api_negative.py  test_api_smoke.py
