[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toolshop-api-quality-suite"
version = "0.1.0"
description = "Primeira suite de automacao de API para o ecossistema Practice Software Testing."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<0.29",
  "pytest>=8.2,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
  "smoke: cenarios principais da rodada inicial",
  "negative: cenarios negativos basicos",
]
